--- a/PortFolio/index.html
+++ b/PortFolio/index.html
@@ -9,23 +9,32 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<header>
-		<h1 class="text-uppercase fw-semibold"> Dev.Farhana </h1>
+	<header class="bg-secondary">
+		<h1 class="text-uppercase fw-semibold bg-dark-subtle rounded-4"> Dev.Farhana </h1>
 		<nav>
-			<ul class="d-flex p-0 list-unstyled">
-				<li><a href="#about">About Me</a></li>
-				<li><a href="#projects">My Projects</a></li>
-				<li><a href="#service">Services</a></li>
-				<li><a href="#contact">Contact Me</a></li>
-			</ul>
+            <ul class="nav nav-tabs">
+                <li class="nav-item">
+                  <a class="nav-link active" href="#home"> Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link link-light" href="#about"> About Me</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link link-light" href="#services"> Services</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link link-light"  href="#contact"> Contact Me</a>
+                </li>
+              </ul>
 		</nav>
+
 	</header>
 
-    <section class="container-fluid bgimage" id="home">
+    <section class="container-fluid section bgimage" id="home">
         <div class="row">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 hero_text">
-                <h2 class="hero_title col-4">Hi, it's me Farhana</h2>
-                <p class="hero_desc col-3">I am a Beginner Developer.</p>
+            <div class="col-lg-12 ms-4" id="text">
+                <h2 class="col mt-4 ms-2 fs-1">Hi, it's me Farhana.</h2>
+                <p class="col mt-2 fs-1">I am a beginner Web Developer, exploring new technologies is my passion.</p>
             </div>
         </div>
     </section>
@@ -35,20 +44,22 @@
             <div class="col-lg-6">
                 <div class="col-lg-6">
                     <h1 class="fs-1 text-center">About Me</h1>      
-                    <ul style="list-style: symbols();">
-                        <li>Html & CSS</li>
-                        <li>Javascript(ES-6)</li>
-                        <li>React-Js</li>
+                    <ul class="list-unstyled  text-center">
+                        <li class="list-item"> ⭐ Html & CSS</li>
+                        <li class="list-item"> ⭐ Javascript(ES-6)</li>
+                        <li class="list-item"> ⭐ React-Js</li>
                     </ul>                
                 </div>
-                    <p>I discovered my interest in web development when I realized the power of HTML and CSS in shaping the visual aspects of websites. With HTML, I can structure content, while CSS allows me to style and make everything visually appealing. </p>
+                <div class="text-center">
+                    <p class="paras">I discovered my interest in web development when I realized the power of HTML and CSS in shaping the visual aspects of websites. With HTML, I can structure content, while CSS allows me to style and make everything visually appealing. </p>
                     
-                    <p>It's incredible how I can bring interactivity and functionality to websites with it. Whether it's creating dynamic elements, handling user input, or making web applications, JavaScript opens up endless possibilities.</p>
-
-                    <p>One of my favorite technologies is React JS. It's an amazing JavaScript library that makes building user interfaces a breeze. I've been learning how to create component-based applications, manage state, and make responsive, interactive web apps with React.I'm constantly seeking new opportunities to learn, grow, and become a proficient developer.</p>
+                    <p class="paras">It's incredible how I can bring interactivity and functionality to websites with it. Whether it's creating dynamic elements, handling user input, or making web applications, JavaScript opens up endless possibilities.</p>
+                    
+                    <p class="paras">One of my favorite technologies is React JS. It's an amazing JavaScript library that makes building user interfaces a breeze. I've been learning how to create component-based applications, manage state, and make responsive, interactive web apps with React.I'm constantly seeking new opportunities to learn, grow, and become a proficient developer.</p>
+                </div>
             </div>
             <div class="col-lg-6">
-                <img class="w-75" src="./Images/image1.jpg" alt="image">  
+                <img class="w-75 rounded-4 imgClass"  src="./Images/image1.jpg" alt="image">  
             </div>
         </div>
 
@@ -101,12 +112,12 @@
             <div class="row">
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/portfolioImage1.jpeg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="Images/project-1.jpeg" alt="Card image" style="width:100%">
                         <div class="card-body">
                             <h4 class="card-title">YouTube Clone</h4>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="https://mytube-video8e6e.netlify.app/ " target="_blank" class="btn btn-outline-secondary ">Link</a>
                             </div>
                         </div>
                     </div>
@@ -114,12 +125,12 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/portfolioImage4.jpeg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="./Images/project-2.jpeg" alt="Card image" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">Quiz App</h4>
+                            <h4 class="card-title">Music Player Design</h4>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="https://musicplayer-123e.netlify.app/" target="_blank" class="btn btn-outline-secondary">Link</a>
                             </div>
                         </div>
                     </div>
@@ -127,12 +138,12 @@
 
                 <div class="col-lg-4 mt-4">
                     <div class="card">
-                        <img class="card-img-top" src="images/portfolioImage3.jpeg" alt="Card image" style="width:100%">
+                        <img class="card-img-top" src="./Images/project-3.JPG" alt="Card image" style="width:100%">
                         <div class="card-body">
-                            <h4 class="card-title">Landing Page</h4>
+                            <h4 class="card-title">Personal Profile Page</h4>
                             <p class="card-text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Link</a>
+                                <a href="https://dev-farhana.github.io/Portfolio/" target="_blank" class="btn btn-outline-secondary" > Link</a>
                             </div>
                         </div>
                     </div>
@@ -184,15 +195,17 @@
         </div>
         <div>
             <p><a href="#home">Home  </a> | <a href="#about"> About </a> | <a href="#contact">Contact</a> |
-            <a href="#projects">Projects </a> | </p>
+            <a href="#portfolio">Portfolio </a> | </p>
             <p class="bg-secondary-subtle fw-semibold">Copyright © 2023</p>
         </div>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="app.js">  </script>
+
 </body>
 </html>
-
-
-<body>
 
 
 
